[package]
name = "glenn-rs"
version = "0.1.0"
authors = ["Henrik Larsson <reg@henkelarsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
exitfailure = "0.5.1"
rusoto_core = "0.41.0"
rusoto_ssm = "0.41.0"
