[package]
name = "glenn-tui"
version = "0.1.0"
authors = ["Henrik Larsson <reg@henkelarsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
log = "0.4.8"
stderrlog = "0.4"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
exitfailure = "0.5.1"
tui = "0.5"
termion = "1.5"
rusoto_core = "0.41.0"
rusoto_ssm = "0.41.0"
structopt = "0.2.10"

[[bin]]
bench = false
path = "src/main.rs"
name = "glenn"
